<resources>
    <string name="app_name">ClockConfigurator</string>
    <string name="service_desc">Clock configurator ADPU service</string>
    <string name="aid_desc">AID desc</string>
    <string name="select">Select</string>
    <string name="header">Clock Configurator</string>
    <string name="alarm">Alarm</string>
    <string name="ldr">Light Detection</string>
    <string name="write_settings">Write settings</string>
    <string name="date_display">%1$02d.%2$02d.%3$d</string>
    <string name="time_display">%1$02d:%2$02d:%3$02d</string>
    <string name="alarm_time_display">%1$02d:%2$02d</string>
    <string name="set_automatically">Set automatically</string>
    <string name="nfc_message">( Attach the device )</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alarm_time">Alarm time</string>
    <string name="default_alarm_time">00:00</string>
    <string name="default_date">01.01.2000</string>
    <string name="default_time">00:00:00</string>
</resources>