<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider_vertical">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider_horizontal">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/default_date"
            android:inputType="date" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/select" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider_horizontal">

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/default_time"
            android:inputType="time" />

        <Button
            android:id="@+id/buttonSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/select" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_time"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider_horizontal">

        <EditText
            android:id="@+id/editTextAlarmTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_alarm_time"
            android:inputType="time" />

        <Button
            android:id="@+id/buttonSelectAlarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAutoTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:checked="true"
        android:textSize="20sp"
        android:text="@string/set_automatically"
        android:textAlignment="center" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textSize="20sp"
        android:text="@string/alarm"
        android:textAlignment="center" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchLDR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textSize="20sp"
        android:text="@string/ldr"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="78dp"
        android:paddingRight="78dp"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:id="@+id/buttonWriteSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNFCMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nfc_message"
        android:textSize="34sp"
        android:visibility="invisible"
        android:gravity="center" />


</LinearLayout>